--- a/vimfiles/rc/dein.toml
+++ b/vimfiles/rc/dein.toml
@@ -8,26 +8,76 @@ repo = 'itchyny/lightline.vim'
 repo = 'Yggdroot/indentLine'
 
 [[plugins]]
-repo = 'tyru/open-browser.vim'
-
-[[plugins]]
-repo = 'kannokanno/previm'
-
-[[plugins]]
 repo = 'Shougo/neomru.vim'
+
+[[plugins]]
+repo = 'w0rp/ale.vim'
 
 [[plugins]]
 repo = 'Shougo/neoyank.vim'
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
-depends = ['neomru.vim']
-on_event = 'BufRead'
+# depends = ['neomru.vim']
+# on_event = 'BufRead'
 hook_add = '''
-	nnoremap [Denite] <Nop>
-	nmap f [Denite]
-	nnoremap <silent> [Denite]b :<C-u>Denite buffer<CR>
-	nnoremap <silent> [Denite]m :<C-u>Denite file_mru<CR>
-	nnoremap <silent> [Denite]h :<C-u>Denite neoyank<CR>
+	" nnoremap [Denite] <Nop>
+	" nmap f [Denite]
+	" nnoremap <silent> [Denite]b :<C-u>Denite buffer<CR>
+	" nnoremap <silent> [Denite]m :<C-u>Denite file_mru<CR>
+	" nnoremap <silent> [Denite]h :<C-u>Denite neoyank<CR>
+
+    " Denite用プレフィックス
+    nmap [Denite] <Nop>
+    nmap f [Denite]
+
+    " プロジェクト内のファイル検索
+    nmap <silent> [Denite]p :<C-u>Denite file_rec -highlight-mode-insert=Search<CR>
+    " バッファに展開中のファイル検索
+    nmap <silent> [Denite]b :<C-u>Denite buffer -highlight-mode-insert=Search<CR>
+    " ファイル内の関数/クラス等の検索
+    nmap <silent> [Denite]o :<C-u>Denite outline -highlight-mode-insert=Search<CR>
+    " dotfiles配下をカレントにしてfile_rec起動
+    nmap <silent> [Denite]v :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/vimfiles']}]) -highlight-mode-insert=Search=Search<CR>
+    nmap <silent> [Denite]g :<C-u>Denite grep<CR>
+    nmap <silent> [Denite]m :<C-u>Denite file_mru -highlight-mode-insert=Search<CR>
+
+    " 上下移動を<C-N>, <C-P>
+    call denite#custom#map('normal', '<C-N>', '<denite:move_to_next_line>')
+    call denite#custom#map('normal', '<C-P>', '<denite:move_to_previous_line>')
+    call denite#custom#map('insert', '<C-N>', '<denite:move_to_next_line>')
+    call denite#custom#map('insert', '<C-P>', '<denite:move_to_previous_line>')
+    " 入力履歴移動を<C-J>, <C-K>
+    call denite#custom#map('insert', '<C-J>', '<denite:assign_next_text>')
+    call denite#custom#map('insert', '<C-K>', '<denite:assign_previous_text>')
+    " 横割りオープンを`<C-S>`
+    call denite#custom#map('insert', '<C-S>', '<denite:do_action:split>')
+    " 縦割りオープンを`<C-I>`
+    call denite#custom#map('insert', '<C-I>', '<denite:do_action:vsplit>')
+    " タブオープンを`<C-O>`
+    call denite#custom#map('insert', '<C-O>', '<denite:do_action:tabopen>')
+
+    " 検索対象外のファイル指定
+    call denite#custom#filter('matcher_ignore_globs', 'ignore_globs',
+        \ [ '.git/', '.ropeproject/', '__pycache__/',
+        \   'venv/', 'images/', '*.min.*', 'img/', 'fonts/'])
+
+    if executable('rg')
+        call denite#custom#var('file_rec', 'command',
+                \ ['rg', '--files', '--glob', '!.git'])
+        call denite#custom#var('grep', 'command', ['rg'])
+        call denite#custom#var('grep', 'default_opts', ['--vimgrep', '--no-heading', '-S'])
+        call denite#custom#var('grep', 'recursive_opts', [])
+        call denite#custom#var('grep', 'final_opts', [])
+        call denite#custom#var('grep', 'pattern_opt', ['-e'])
+        call denite#custom#var('grep', 'separator', ['--'])
+    endif
+
+    " /をDeniteにマッピング
+    nnoremap <silent> / :<C-u>Denite -buffer-name=search -auto-resize line<CR>
+
+    " 検索バッファを開く
+    nnoremap <silent> ;/ :<C-u>Denite -buffer-name=search -resume -mode=insert<CR>
+
 '''
 
